--- a/index.css
+++ b/index.css
@@ -18,11 +18,24 @@ body {
 #canvas {
     width: 800px;
     height: 600px;
+    margin:0;
+    /*margin-left: auto;*/
+    /*margin-right: auto;*/
+    /*margin-bottom: 10px;*/
+    display: block;
+    /*background-color: '#0078F8';*/
+    border-radius: 5px;
+}
+
+#screen {
+    width: 800px;
+    height: 600px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
     display: block;
     /*background-color: '#0078F8';*/
+    background-color: #000000;
     border-radius: 5px;
 }
 
